@@ -9,6 +9,7 @@
   (axelclk).
 * FEATURE: Add Special:Imagelist page to display a list of all images.
 * FEATURE: Add Special:Filelist page to display a list of all non-image files.
+* FEATURE: Experimental Special:Import XML import from Gutsul (gutsul).
 * BUG: Fixes for MS SQL issues, provided by Scott Croco (scroco).
 * BUG: "Login already exists" error when trying to update user account fixed.
 * BUG: Fix upload error with IE that could cause file upload to incorrectly
